gitops-repo/apps/dashboard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-app
  labels:
    app: dashboard-app
spec:
  replicas: 2
  revisionHistoryLimit: 3
  progressDeadlineSeconds: 600
  selector:
    matchLabels:
      app: dashboard-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: dashboard-app
        name: dashboard-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/production
                    operator: In
                    values:
                      - "worker-production"
      tolerations: []
      containers:
        - name: dashboard-app
          image: wolfix1245/dashboard:prod-latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
              protocol: TCP
          resources:
            requests:
              cpu: "500m"
              memory: "1000Mi"
              ephemeral-storage: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2000Mi"
              ephemeral-storage: "1Gi"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
